--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spotify - Your Favourite Music is Here</title>
     <link rel="stylesheet" href="style.css">
+    <link id='icon' rel="shortcut icon" href="icon.png" type="image/x-png">
 </head>
 
 <body>
